<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/addcar"
        android:icon="@drawable/car"
        android:title="@string/addcar" />



    <item android:id="@+id/adddriver"
        android:icon="@drawable/driver"
        android:title="@string/adddriver" />

    <item android:id="@+id/notification"
        android:icon="@drawable/notification"
        android:title="@string/notification" />

    <item android:id="@+id/dnotification"
        android:icon="@drawable/notification"
        android:title="@string/dnotification" />
    <item android:id="@+id/carbooking"
        android:icon="@drawable/car1"
        android:title="@string/carbooking" />
    <item android:id="@+id/driverbooking"
        android:icon="@drawable/car1"
        android:title="@string/driverbooking" />

    <item android:id="@+id/updatecar"
        android:icon="@drawable/tools"
        android:title="@string/updatecar" />

    <item android:id="@+id/updatedriver"
        android:icon="@drawable/tools"
        android:title="@string/updatedriver" />

    <item android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/about" />
    <item android:id="@+id/logout"
        android:icon="@drawable/logouticon"
        android:title="Logout" />
</menu>